syntax = "proto3";

package product;

option go_package = "/product";

service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {}
  rpc GetProduct(GetProductReq) returns (GetProductResp) {}
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {}
  rpc CreateProducts(CreateProductsReq) returns (CreateProductsResp){}
  rpc UpdateProducts(UpdateProductsReq) returns (UpdateProductsResp){}
  rpc DeleteProducts(DeleteProductsReq) returns (DeleteProductsResp){}
}

message ListProductsReq{
  uint32 page = 1;
  uint32 pageSize = 2;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string file_path = 3;
  string image_path = 4;
  float price = 5;

  repeated string categories = 7;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message SearchProductsReq {
  string query = 1;
  string method=2;
}

message SearchProductsResp {
  repeated Product results = 1;
}

message CreateProductsReq{
  repeated Product products=1;
  repeated uint32 stock =2;
}

message CreateProductsResp{
  repeated uint32 product_id=1;
}

message UpdateProductsReq{
  repeated Product products=1;
  repeated uint32 stock =2;
}

message UpdateProductsResp{
  repeated uint32 product_id=1;
}

message DeleteProductsReq{
  repeated uint32 product_id=1;
}

message DeleteProductsResp{
  repeated uint32 product_id=1;
}